Agregando proyectos de prueba básicos Ángular

--- a/Angular/Basico/mi-primera-app/src/app/personas/personas.component.html
+++ b/Angular/Basico/mi-primera-app/src/app/personas/personas.component.html
@@ -9,6 +9,14 @@
       </button>
       <p>{{ mensaje }}</p>
       <app-persona></app-persona>
+
+      <label>Nacionalidad Persona</label>
+      <input type="text" class="form-control" [(ngModel)]="nacionalidad">
+      <p>{{ nacionalidad }}</p>
+
+      <label>Título Persona</label>
+      <input type="text" class="form-control" (input)="modificarTitulo($event)">
+      {{ titulo }}
     </div>
   </div>
 </div>
