--- a/Angular/Basico/mi-primera-app/src/app/personaV2/persona-v2/persona-v2.component.html
+++ b/Angular/Basico/mi-primera-app/src/app/personaV2/persona-v2/persona-v2.component.html
@@ -1,9 +1,4 @@
-<div class="container">
-    <div class="row">
-        <div class="col">
-            <div>
-                {{ indice }}. {{ persona.nombre }} {{ persona.apellido }}
-            </div>
-        </div>
-    </div>
-  </div>
+<div class="item">
+    <input type="checkbox" (click)="emitirSaludo()" />
+    <p>{{ indice }}. {{ persona.nombre }} {{ persona.apellido }}</p>
+</div>
