--- a/Angular/Ejercicios/presupuesto-app/src/app/app.component.css
+++ b/Angular/Ejercicios/presupuesto-app/src/app/app.component.css
@@ -4,7 +4,7 @@
 
 .header{
     height: 40%;
-    background-image: url('../assets/images/fondoTotales.jpg');
+    background-image: url("../assets/images/fondoTotales.jpg");
     background-size: cover;
     background-repeat: no-repeat;
 }
@@ -22,6 +22,7 @@
 
 .data_row{
     width: 50%;
+    text-align: center;
 }
 
 @media (min-width: 320px){
