--- a/Angular/Basico/mi-primera-app/src/app/app.component.html
+++ b/Angular/Basico/mi-primera-app/src/app/app.component.html
@@ -1,3 +1,10 @@
+<div class="box centrado" *ngIf="!isAutenticado()">
+    <a routerLink="/login">Login</a>
+</div>
+<div class="box centrado" *ngIf="isAutenticado()">
+    <a style="cursor: pointer;" (click)="salir()">Salir</a>
+</div>
+
 <h1>Listado de Personas</h1>
 
 <router-outlet></router-outlet>
